fix article height for text overflow

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -101,7 +101,7 @@
   background-color: white;
 }
 .article-open {
-  height: 400px;
+  height: auto;
 }
 html,
 body {
